introduce admin section
1.8.7 (1)

--- a/src/app/pages/board/showboardpost/showboardpost.page.html
+++ b/src/app/pages/board/showboardpost/showboardpost.page.html
@@ -27,7 +27,7 @@
       <div class="post-author-container">
         <div class="post-author ion-text-wrap" >
           {{post.author.first_name}} {{post.author.last_name}}
-          <ion-icon name="alert-circle" *ngIf="post.status === 'review'" (click)="boardService.explainPostAbuse($event, (hasRestvoStaffAccess || isGroupLeader) && post.author._id !== userData.user._id)" color="grey"></ion-icon>
+          <ion-icon name="alert-circle" *ngIf="post.status === 'review'" (click)="boardService.explainPostAbuse($event, (hasPlatformAdminAccess || isGroupLeader) && post.author._id !== userData.user._id)" color="grey"></ion-icon>
         </div>
       </div>
       <ion-col slot="end" class="note-col">
@@ -128,7 +128,7 @@
           <ion-icon name="share"></ion-icon>Share</ion-button>
       </ion-col>
     </ion-row>
-    <ion-row *ngIf="hasRestvoStaffAccess || isGroupLeader || post.author._id === userData.user._id">
+    <ion-row *ngIf="hasPlatformAdminAccess || isGroupLeader || post.author._id === userData.user._id">
       <ion-col>
         <ion-button fill="clear" size="small" (click)="editPost()">
           <ion-icon name="cog"></ion-icon>
