--- a/src/app/pages/user/user.page.html
+++ b/src/app/pages/user/user.page.html
@@ -34,7 +34,7 @@
           </ion-item>
           <ion-item (click)="clickManageMenu('programs')">
             <ion-icon slot="start" name="book" *ngIf="platform.width() < 768"></ion-icon>
-            <ion-label [ngClass]="{ 'bold-font': (selectedMenuOption === 'programs')}">Mentoring</ion-label>
+            <ion-label [ngClass]="{ 'bold-font': (selectedMenuOption === 'programs')}">Home Page</ion-label>
           </ion-item>
           <ion-item (click)="clickManageMenu('calendar')">
             <ion-icon slot="start" name="calendar" *ngIf="platform.width() < 768"></ion-icon>
