--- a/src/app/pages/main-tab/main-tab.page.html
+++ b/src/app/pages/main-tab/main-tab.page.html
@@ -5,10 +5,10 @@
       <ion-icon ios="people-sharp" md="people-sharp"></ion-icon>
     </ion-tab-button>
     <ion-tab-button [tab]="'dashboard/insight/' + userData.defaultProgram._id" *ngIf="userData.defaultProgram && userData.UIAdminMode && (userData.defaultProgram.user_list_2.includes(userData.user._id) || userData.defaultProgram.user_list_3.includes(userData.user._id))"  [ngClass]="{'tab-selected': router.url.includes('dashboard')}">
-      <ion-icon ios="people-sharp" md="people-sharp"></ion-icon>
+      <ion-icon name="home"></ion-icon>
     </ion-tab-button>
     <ion-tab-button [tab]="'discover/home/' + userData.defaultProgram._id" *ngIf="userData.defaultProgram && (!userData.UIAdminMode || ((!userData.defaultProgram.user_list_2 || !userData.defaultProgram.user_list_2.includes(userData.user._id)) && (!userData.defaultProgram.user_list_3 || !userData.defaultProgram.user_list_3.includes(userData.user._id))))"  [ngClass]="{'tab-selected': router.url.includes('discover')}">
-      <ion-icon ios="people-sharp" md="people-sharp"></ion-icon>
+      <ion-icon name="home"></ion-icon>
     </ion-tab-button>
     <ion-tab-button tab="news" *ngIf="!userData.UIAdminMode">
       <ion-icon name="newspaper"></ion-icon>
