--- a/src/app/pages/user/user.page.html
+++ b/src/app/pages/user/user.page.html
@@ -33,7 +33,7 @@
             <ion-label [ngClass]="{ 'bold-font': (selectedMenuOption === 'about')}">About Me</ion-label>
           </ion-item>
           <ion-item (click)="clickManageMenu('programs')">
-            <ion-icon slot="start" name="book" *ngIf="platform.width() < 768"></ion-icon>
+            <ion-icon slot="start" name="home" *ngIf="platform.width() < 768"></ion-icon>
             <ion-label [ngClass]="{ 'bold-font': (selectedMenuOption === 'programs')}">Home Page</ion-label>
           </ion-item>
           <ion-item (click)="clickManageMenu('calendar')">
