--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -19,13 +19,13 @@
           <ion-menu-toggle auto-hide="false" *ngIf="userData.defaultProgram && userData.UIAdminMode && (userData.defaultProgram.user_list_2.includes(userData.user._id) || userData.defaultProgram.user_list_3.includes(userData.user._id))">
             <ion-item [routerLink]="['/app/dashboard/insight/' + userData.defaultProgram._id]">
               <ion-icon slot="start" name="home"></ion-icon>
-              <ion-label>Home</ion-label>
+              <ion-label>{{userData.defaultProgram.matrix_string[0][0]}}</ion-label>
             </ion-item>
           </ion-menu-toggle>
           <ion-menu-toggle auto-hide="false" *ngIf="userData.defaultProgram && (!userData.UIAdminMode || (!userData.defaultProgram.user_list_2.includes(userData.user._id) && !userData.defaultProgram.user_list_3.includes(userData.user._id)))">
             <ion-item [routerLink]="['/app/discover/home/' + userData.defaultProgram._id]">
               <ion-icon slot="start" name="home"></ion-icon>
-              <ion-label>Home</ion-label>
+              <ion-label>{{userData.defaultProgram.matrix_string[0][0]}}</ion-label>
             </ion-item>
           </ion-menu-toggle>
           <ion-menu-toggle auto-hide="false" *ngIf="!userData.defaultProgram">
