--- a/src/app/pages/feature/showfeature/showfeature.page.scss
+++ b/src/app/pages/feature/showfeature/showfeature.page.scss
@@ -333,7 +333,7 @@ app-showfeature {
   }
 
   .person-slide {
-    max-width: 400px;
+    // max-width: 400px;
   }
 
   .person-card {
@@ -460,7 +460,7 @@ app-showfeature {
   }
 
   .program-slide {
-    max-width: 150px;
+    // max-width: 150px;
   }
 
   .program-card {
