--- a/src/app/pages/user/programs/programs.page.html
+++ b/src/app/pages/user/programs/programs.page.html
@@ -3,7 +3,7 @@
     <ion-buttons slot="start">
       <ion-button (click)="closeModal()"><ion-icon name="chevron-back-outline"></ion-icon></ion-button>
     </ion-buttons>
-    <ion-title>Mentoring</ion-title>
+    <ion-title>Home</ion-title>
   </ion-toolbar>
 </ion-header>
 
