--- a/src/app/pages/feature/manage/managefeature.page.html
+++ b/src/app/pages/feature/manage/managefeature.page.html
@@ -15,7 +15,7 @@
 
     </ion-title>-->
     <ion-title (click)="select.open($event)" *ngIf="!modalPage">{{moment.matrix_string[0][0]}} <ion-note><ion-icon name="create-outline"></ion-icon></ion-note>
-      <ion-select [(ngModel)]="userData.currentManageActivityId" (ionChange)="changeManageActivity($event)" interface="popover" hidden>
+      <ion-select [(ngModel)]="userData.currentManageActivityId" (ionChange)="changeManageActivity($event)" [interface]="platform.width() < 768 ? 'alert' : 'popover'" [interfaceOptions]="{header: 'Manage'}" hidden>
         <div *ngFor="let activity of userData.activitiesWithAdminAccess">
           <ion-select-option [value]="activity._id" *ngIf="activity.categories.includes('5c915324e172e4e64590e346')">{{activity.name}}</ion-select-option>
         </div>
