css fix, bug fix for newConversation(), added the check if existing connection chat already exists, and if so return conversationId
1.8.7 (3)

--- a/src/app/pages/connect/createchat/createchat.page.html
+++ b/src/app/pages/connect/createchat/createchat.page.html
@@ -41,11 +41,11 @@
 
 <ion-content>
   <ion-grid style="height: 100%" *ngIf="ionSpinner">
-    <ion-row class="ion-justify-content-start ion-align-items-center" style="height: 100%">
+    <ion-row class="ion-align-items-center" style="height: 100%">
       <ion-spinner name="dots"></ion-spinner>
     </ion-row>
   </ion-grid>
-  <div *ngIf="page === 1 && !ionSpinner">
+  <div *ngIf="page === 1">
     <ion-list-header>Friends</ion-list-header>
     <ion-list>
       <ion-item *ngFor="let person of listOfFriends; trackBy: customTrackBy" (click)="select(person)">
