--- a/src/app/pages/user/about/about.page.html
+++ b/src/app/pages/user/about/about.page.html
@@ -12,7 +12,7 @@
 
 <ion-content class="ion-padding-top">
   <ion-grid style="height: 100%" *ngIf="!programs">
-    <ion-row class="ion-justify-content-start ion-align-items-center" style="height: 100%">
+    <ion-row class="ion-align-items-center" style="height: 100%">
       <ion-spinner name="dots"></ion-spinner>
     </ion-row>
   </ion-grid>
