--- a/src/app/pages/feature/createfeature/createfeature.page.html
+++ b/src/app/pages/feature/createfeature/createfeature.page.html
@@ -190,7 +190,7 @@
     </ion-slide>
   </ion-slides>
   <ion-grid style="height: 100%" *ngIf="ionSpinner">
-    <ion-row class="ion-justify-content-start ion-align-items-center" style="height: 100%">
+    <ion-row class="ion-align-items-center" style="height: 25px">
       <ion-spinner name="dots"></ion-spinner>
     </ion-row>
   </ion-grid>
