--- a/src/app/pages/feature/editparticipants/editparticipants.page.html
+++ b/src/app/pages/feature/editparticipants/editparticipants.page.html
@@ -14,91 +14,98 @@
 </ion-header>
 
 <ion-content *ngIf="resource && resource._id && moment.resource && moment.resource.field">
-  <ion-item lines="none">
-    <ion-label>{{participantsLabel}}</ion-label>
-  </ion-item>
-  <ion-grid *ngIf="moment._id" class="user-list-preview">
-    <ion-row class="participant-row">
-      <ion-col class="ion-align-self-center" size="auto">
-        <ion-item lines="none" (click)="addParticipants($event, 'connect', ['user_list_1'], participantsLabel)">
-          <div class="participant-centered">
-            <ion-avatar class="participant-avatar" slot="start">
-              <img src="assets/img/avatar-default.jpg"/>
-            </ion-avatar>
-            <ion-label class="participant-label ion-text-center">{{resource['en-US'].value[31]}} {{participantLabel}}</ion-label> <!--Add Participant-->
-          </div>
-        </ion-item>
-      </ion-col>
-      <ion-col *ngFor="let user of moment.user_list_1; index as j" class="ion-align-self-center" size="auto">
-        <ion-item lines="none" (click)="seeUserInfo($event, user)">
-          <div class="participant-centered">
-            <ion-avatar class="participant-avatar" slot="start">
-              <ion-img *ngIf="user.avatar" [src]="user.avatar"></ion-img>
-              <ion-img *ngIf="!user.avatar" src="assets/img/avatar-default.jpg"></ion-img>
-            </ion-avatar>
-            <ion-icon class="participant-joined" color="danger" name="remove-circle" (click)="removeParticipant($event, 'participant', j)"></ion-icon>
-            <ion-label class="participant-label ion-text-center">{{user.first_name}} {{user.last_name}}</ion-label>
-          </div>
-        </ion-item>
-      </ion-col>
+  <ion-grid style="height: 100%; position: absolute" *ngIf="momentService.ionSpinner">
+    <ion-row class="ion-align-items-center" style="height: 100%">
+      <ion-spinner name="dots"></ion-spinner>
     </ion-row>
   </ion-grid>
-  <ion-item lines="none">
-    <ion-label>{{leadersLabel}}</ion-label>
-  </ion-item>
-  <ion-grid *ngIf="moment._id" class="user-list-preview">
-    <ion-row class="participant-row">
-      <ion-col class="ion-align-self-center" size="auto">
-        <ion-item lines="none" (click)="addParticipants($event, 'connect', ['user_list_3'], leadersLabel)">
-          <div class="participant-centered">
-            <ion-avatar class="participant-avatar" slot="start">
-              <img src="assets/img/avatar-default.jpg"/>
-            </ion-avatar>
-            <ion-label class="participant-label ion-text-center">{{resource['en-US'].value[31]}} {{leaderLabel}}</ion-label>
-          </div>
-        </ion-item>
-      </ion-col>
-      <ion-col *ngFor="let user of moment.user_list_3; index as j" class="ion-align-self-center" size="auto">
-        <ion-item lines="none" (click)="seeUserInfo($event, user)">
-          <div class="participant-centered">
-            <ion-avatar class="participant-avatar" slot="start">
-              <ion-img *ngIf="user.avatar" [src]="user.avatar"></ion-img>
-              <ion-img *ngIf="!user.avatar" src="assets/img/avatar-default.jpg"></ion-img>
-            </ion-avatar>
-            <ion-icon class="participant-joined" color="danger" name="remove-circle" (click)="removeParticipant($event, 'leader', j)"></ion-icon>
-            <ion-label class="participant-label ion-text-center">{{user.first_name}} {{user.last_name}}</ion-label>
-          </div>
-        </ion-item>
-      </ion-col>
-    </ion-row>
-  </ion-grid>
-  <ion-item lines="none">
-    <ion-label>{{organizersLabel}}</ion-label>
-  </ion-item>
-  <ion-grid class="user-list-preview" *ngIf="moment._id">
-    <ion-row class="participant-row">
-      <ion-col class="ion-align-self-center" size="auto">
-        <ion-item lines="none" (click)="addParticipants($event, 'connect', ['user_list_2'], organizersLabel)">
-          <div class="participant-centered">
-            <ion-avatar class="participant-avatar" slot="start">
-              <img src="assets/img/avatar-default.jpg"/>
-            </ion-avatar>
-            <ion-label class="participant-label ion-text-center">{{resource['en-US'].value[31]}} {{organizerLabel}}</ion-label>
-          </div>
-        </ion-item>
-      </ion-col>
-      <ion-col *ngFor="let user of moment.user_list_2; index as j" class="ion-align-self-center" size="auto">
-        <ion-item lines="none" (click)="seeUserInfo($event, user)">
-          <div class="participant-centered">
-            <ion-avatar class="participant-avatar" slot="start">
-              <ion-img *ngIf="user.avatar" [src]="user.avatar"></ion-img>
-              <ion-img *ngIf="!user.avatar" src="assets/img/avatar-default.jpg"></ion-img>
-            </ion-avatar>
-            <ion-icon class="participant-joined" color="danger" name="remove-circle" (click)="removeParticipant($event, 'organizer', j)"></ion-icon>
-            <ion-label class="participant-label ion-text-center">{{user.first_name}} {{user.last_name}}</ion-label>
-          </div>
-        </ion-item>
-      </ion-col>
-    </ion-row>
-  </ion-grid>
+  <div>
+    <ion-item lines="none">
+      <ion-label>{{participantsLabel}}</ion-label>
+    </ion-item>
+    <ion-grid *ngIf="moment._id" class="user-list-preview">
+      <ion-row class="participant-row">
+        <ion-col class="ion-align-self-center" size="auto">
+          <ion-item lines="none" (click)="addParticipants($event, 'connect', ['user_list_1'], participantsLabel)">
+            <div class="participant-centered">
+              <ion-avatar class="participant-avatar" slot="start">
+                <img src="assets/img/avatar-default.jpg"/>
+              </ion-avatar>
+              <ion-label class="participant-label ion-text-center">{{resource['en-US'].value[31]}} {{participantLabel}}</ion-label> <!--Add Participant-->
+            </div>
+          </ion-item>
+        </ion-col>
+        <ion-col *ngFor="let user of moment.user_list_1; index as j" class="ion-align-self-center" size="auto">
+          <ion-item lines="none" (click)="seeUserInfo($event, user)">
+            <div class="participant-centered">
+              <ion-avatar class="participant-avatar" slot="start">
+                <ion-img *ngIf="user.avatar" [src]="user.avatar"></ion-img>
+                <ion-img *ngIf="!user.avatar" src="assets/img/avatar-default.jpg"></ion-img>
+              </ion-avatar>
+              <ion-icon class="participant-joined" color="danger" name="remove-circle" (click)="removeParticipant($event, 'participant', j)"></ion-icon>
+              <ion-label class="participant-label ion-text-center">{{user.first_name}} {{user.last_name}}</ion-label>
+            </div>
+          </ion-item>
+        </ion-col>
+      </ion-row>
+    </ion-grid>
+    <ion-item lines="none">
+      <ion-label>{{leadersLabel}}</ion-label>
+    </ion-item>
+    <ion-grid *ngIf="moment._id" class="user-list-preview">
+      <ion-row class="participant-row">
+        <ion-col class="ion-align-self-center" size="auto">
+          <ion-item lines="none" (click)="addParticipants($event, 'connect', ['user_list_3'], leadersLabel)">
+            <div class="participant-centered">
+              <ion-avatar class="participant-avatar" slot="start">
+                <img src="assets/img/avatar-default.jpg"/>
+              </ion-avatar>
+              <ion-label class="participant-label ion-text-center">{{resource['en-US'].value[31]}} {{leaderLabel}}</ion-label>
+            </div>
+          </ion-item>
+        </ion-col>
+        <ion-col *ngFor="let user of moment.user_list_3; index as j" class="ion-align-self-center" size="auto">
+          <ion-item lines="none" (click)="seeUserInfo($event, user)">
+            <div class="participant-centered">
+              <ion-avatar class="participant-avatar" slot="start">
+                <ion-img *ngIf="user.avatar" [src]="user.avatar"></ion-img>
+                <ion-img *ngIf="!user.avatar" src="assets/img/avatar-default.jpg"></ion-img>
+              </ion-avatar>
+              <ion-icon class="participant-joined" color="danger" name="remove-circle" (click)="removeParticipant($event, 'leader', j)"></ion-icon>
+              <ion-label class="participant-label ion-text-center">{{user.first_name}} {{user.last_name}}</ion-label>
+            </div>
+          </ion-item>
+        </ion-col>
+      </ion-row>
+    </ion-grid>
+    <ion-item lines="none">
+      <ion-label>{{organizersLabel}}</ion-label>
+    </ion-item>
+    <ion-grid class="user-list-preview" *ngIf="moment._id">
+      <ion-row class="participant-row">
+        <ion-col class="ion-align-self-center" size="auto">
+          <ion-item lines="none" (click)="addParticipants($event, 'connect', ['user_list_2'], organizersLabel)">
+            <div class="participant-centered">
+              <ion-avatar class="participant-avatar" slot="start">
+                <img src="assets/img/avatar-default.jpg"/>
+              </ion-avatar>
+              <ion-label class="participant-label ion-text-center">{{resource['en-US'].value[31]}} {{organizerLabel}}</ion-label>
+            </div>
+          </ion-item>
+        </ion-col>
+        <ion-col *ngFor="let user of moment.user_list_2; index as j" class="ion-align-self-center" size="auto">
+          <ion-item lines="none" (click)="seeUserInfo($event, user)">
+            <div class="participant-centered">
+              <ion-avatar class="participant-avatar" slot="start">
+                <ion-img *ngIf="user.avatar" [src]="user.avatar"></ion-img>
+                <ion-img *ngIf="!user.avatar" src="assets/img/avatar-default.jpg"></ion-img>
+              </ion-avatar>
+              <ion-icon class="participant-joined" color="danger" name="remove-circle" (click)="removeParticipant($event, 'organizer', j)"></ion-icon>
+              <ion-label class="participant-label ion-text-center">{{user.first_name}} {{user.last_name}}</ion-label>
+            </div>
+          </ion-item>
+        </ion-col>
+      </ion-row>
+    </ion-grid>
+  </div>
 </ion-content>
