--- a/src/app/pages/connect/showrecipientinfo/showrecipientinfo.page.html
+++ b/src/app/pages/connect/showrecipientinfo/showrecipientinfo.page.html
@@ -1,3 +1,4 @@
+<ion-header style="height: 0"></ion-header>
 <ion-content>
   <ion-grid style="height: 100%" *ngIf="!loadCompleted">
     <ion-row class="ion-align-items-center" style="height: 100%">
