--- a/src/app/pages/feature/manage/feature-billing/feature-billing.page.scss
+++ b/src/app/pages/feature/manage/feature-billing/feature-billing.page.scss
@@ -19,4 +19,39 @@ app-feature-billing {
     display: table;
     overflow-x: scroll;
   }
+
+  
+  .column-label {
+    text-align: center;
+  }
+
+  .column {
+    width: 15%;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    margin: 0;
+  
+  }
+
+  .plan {
+    width: 100%;
+    text-align: center;
+  }
+
+  .small-font {
+    font-size: 11px;
+    color: grey
+  }
+
+
+  .money {
+    text-align: center;
+    width: 18%; 
+  }
+
+  .created {
+    text-align: center;
+    width: 20%;
+  }
+
 }
