--- a/src/app/pages/manage/designsystem/designsystem.page.html
+++ b/src/app/pages/manage/designsystem/designsystem.page.html
@@ -68,7 +68,7 @@
         <ion-col size="auto">
           <ion-card class="grid-program-card" style="background-color: var(--ion-color-primary)">
           </ion-card>
-          <ion-row class="ion-justify-content-center" style="margin-top: 5px;">
+          <ion-row class="ion-justify-content-center" style="margin: 5px 5px 5px;">
             <ion-note *ngIf="!this.prefersDark.matches">Primary #E2666A</ion-note>
             <ion-note *ngIf="this.prefersDark.matches">Primary #ED9194</ion-note>
           </ion-row>
@@ -76,7 +76,7 @@
         <ion-col size="auto">
           <ion-card class="grid-program-card" style="background-color: var(--ion-color-secondary)">
           </ion-card>
-          <ion-row class="ion-justify-content-center" style="margin-top: 5px;">
+          <ion-row class="ion-justify-content-center" style="margin: 5px 5px 5px;">
             <ion-note *ngIf="!this.prefersDark.matches">Secondary #FFF</ion-note>
             <ion-note *ngIf="this.prefersDark.matches">Secondary #222428</ion-note>
           </ion-row>
@@ -84,7 +84,7 @@
         <ion-col size="auto">
           <ion-card class="grid-program-card" style="background-color: var(--ion-color-tertiary)">
           </ion-card>
-          <ion-row class="ion-justify-content-center" style="margin-top: 5px;">
+          <ion-row class="ion-justify-content-center" style="margin: 5px 5px 5px;">
             <ion-note *ngIf="!this.prefersDark.matches">Tertiary #053055</ion-note>
             <ion-note *ngIf="this.prefersDark.matches">Secondary #1E5485</ion-note>
           </ion-row>
@@ -92,7 +92,7 @@
         <ion-col size="auto">
           <ion-card class="grid-program-card" style="background-color: var(--ion-color-success)">
           </ion-card>
-          <ion-row class="ion-justify-content-center" style="margin-top: 5px;">
+          <ion-row class="ion-justify-content-center" style="margin: 5px 5px 5px;">
             <ion-note *ngIf="!this.prefersDark.matches">Success #10dc60</ion-note>
             <ion-note *ngIf="this.prefersDark.matches">Success #2fdf75</ion-note>
           </ion-row>
@@ -100,7 +100,7 @@
         <ion-col size="auto">
           <ion-card class="grid-program-card" style="background-color: var(--ion-color-warning)">
           </ion-card>
-          <ion-row class="ion-justify-content-center" style="margin-top: 5px;">
+          <ion-row class="ion-justify-content-center" style="margin: 5px 5px 5px;">
             <ion-note *ngIf="!this.prefersDark.matches">Warning #f6c653</ion-note>
             <ion-note *ngIf="this.prefersDark.matches">Warning #ffd534</ion-note>
           </ion-row>
@@ -108,7 +108,7 @@
         <ion-col size="auto">
           <ion-card class="grid-program-card" style="background-color: var(--ion-color-danger)">
           </ion-card>
-          <ion-row class="ion-justify-content-center" style="margin-top: 5px;">
+          <ion-row class="ion-justify-content-center" style="margin: 5px 5px 5px;">
             <ion-note *ngIf="!this.prefersDark.matches">Danger #F65374</ion-note>
             <ion-note *ngIf="this.prefersDark.matches">Danger #ff4961</ion-note>
           </ion-row>
@@ -116,7 +116,7 @@
         <ion-col size="auto">
           <ion-card class="grid-program-card" style="background-color: var(--ion-color-lightgrey)">
           </ion-card>
-          <ion-row class="ion-justify-content-center" style="margin-top: 5px;">
+          <ion-row class="ion-justify-content-center" style="margin: 5px 5px 5px;">
             <ion-note *ngIf="!this.prefersDark.matches">Lightgrey #F2F2F2</ion-note>
             <ion-note *ngIf="this.prefersDark.matches">Lightgrey #2D2525</ion-note>
           </ion-row>
@@ -124,7 +124,7 @@
         <ion-col size="auto">
           <ion-card class="grid-program-card" style="background-color: var(--ion-color-grey)">
           </ion-card>
-          <ion-row class="ion-justify-content-center" style="margin-top: 5px;">
+          <ion-row class="ion-justify-content-center" style="margin: 5px 5px 5px;">
             <ion-note *ngIf="!this.prefersDark.matches">Grey #909090</ion-note>
             <ion-note *ngIf="this.prefersDark.matches">Grey #EAEAEA</ion-note>
           </ion-row>
@@ -132,7 +132,7 @@
         <ion-col size="auto">
           <ion-card class="grid-program-card" style="background-color: var(--ion-color-darkgrey)">
           </ion-card>
-          <ion-row class="ion-justify-content-center" style="margin-top: 5px;">
+          <ion-row class="ion-justify-content-center" style="margin: 5px 5px 5px;">
             <ion-note *ngIf="!this.prefersDark.matches">Darkgrey #6A6A6A</ion-note>
             <ion-note *ngIf="this.prefersDark.matches">Darkgrey #C6C6C6</ion-note>
           </ion-row>
@@ -140,7 +140,7 @@
         <ion-col size="auto">
           <ion-card class="grid-program-card" style="background-color: var(--ion-color-button1)">
           </ion-card>
-          <ion-row class="ion-justify-content-center" style="margin-top: 5px;">
+          <ion-row class="ion-justify-content-center" style="margin: 5px 5px 5px;">
             <ion-note *ngIf="!this.prefersDark.matches">Button 1 #4267B2</ion-note>
             <ion-note *ngIf="this.prefersDark.matches">Button 1 #4267B2</ion-note>
           </ion-row>
@@ -148,7 +148,7 @@
         <ion-col size="auto">
           <ion-card class="grid-program-card" style="background-color: var(--ion-color-button2)">
           </ion-card>
-          <ion-row class="ion-justify-content-center" style="margin-top: 5px;">
+          <ion-row class="ion-justify-content-center" style="margin: 5px 5px 5px;">
             <ion-note *ngIf="!this.prefersDark.matches">Button 2 #66cdaa</ion-note>
             <ion-note *ngIf="this.prefersDark.matches">Button 2 #66cdaa</ion-note>
           </ion-row>
@@ -156,7 +156,7 @@
         <ion-col size="auto">
           <ion-card class="grid-program-card" style="background-color: var(--ion-color-button3)">
           </ion-card>
-          <ion-row class="ion-justify-content-center" style="margin-top: 5px;">
+          <ion-row class="ion-justify-content-center" style="margin: 5px 5px 5px;">
             <ion-note *ngIf="!this.prefersDark.matches">Button 3 #f6c653</ion-note>
             <ion-note *ngIf="this.prefersDark.matches">Button 3 #f6c653</ion-note>
           </ion-row>
