--- a/src/app/pages/user/programs/programs.page.html
+++ b/src/app/pages/user/programs/programs.page.html
@@ -8,7 +8,7 @@
 </ion-header>
 
 <ion-content>
-  <ion-grid style="height: 100%">
+  <ion-grid style="height: 100%" *ngIf="ionSpinner">
     <ion-row class="ion-align-items-center" style="height: 100%">
       <ion-spinner name="dots"></ion-spinner>
     </ion-row>
